I have added support for small screen sizes, and fixed the login button's padding so it is better aligned with the rest of the content.

--- a/TheatreCMS/Content/Site.css
+++ b/TheatreCMS/Content/Site.css
@@ -1456,5 +1456,5 @@ a.dropdown-item:hover {
 /*This class was added to move the login button more to the right*/
 .loginhthree{
     padding-right: 45px;
-    padding-left: 45px;
+    padding-left: 5px;
 }
